# MachinaOS-security-remediation

./: .dockerignore  .env  .env.dev  .env.dev.example  .env.production.example  .env.template  .gitignore  .npmignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  import.json  install.ps1  install.sh  package.json  pnpm-lock.yaml  pyproject.toml  uninstall.sh
cli/: __main__.py  _common.py  cli.py  config.py  platform_.py  ports.py  pyproject.toml
client/: index.html  package.json
docker/: entrypoint.sh
docs/: docker-deployment.md  prompt-tool-injection-surface.md  security-remediation-plan.md
docs-internal/: DESIGN.md  SCRIPTS.md  SETUP.md  TEMPORAL_ARCHITECTURE.md  agent_architecture.md  ci_cd.md  claude_code_cli_reference.md  claude_code_env_vars_reference.md  claude_code_headless_reference.md  claude_code_interactive_mode.md  claude_code_permission_modes_reference.md  claude_code_skills_reference.md  cli_agent_canonical_patterns_rfc.md  cli_agent_framework.md  cli_services_integration.md  errors.md  event_framework.md  frontend_architecture.md  gcp_vm_deploy_runbook.md  memory_compaction.md  new_service_integration.md  node_allowlist.md  node_creation.md  performance.md  plugin_authoring_rfc.md  plugin_system.md  release_build_pipeline.md  schema_source_of_truth_rfc.md  status_broadcaster.md  stripe_service.md  theme_system.md  ui_migration_plan.md  workflow-schema.md  workflow_ops_protocol.md
machina/: pyproject.toml  supervisor.py
scripts/: install.js
server/: .gitignore  main.py  start.sh  (+3 more)
(+422 files in other folders)
